refactor(scss): drop unused variables

--- a/src/scss/includes/_colors.scss
+++ b/src/scss/includes/_colors.scss
@@ -4,6 +4,8 @@
 // stylelint-disable color-hex-length
 // stylelint-disable scss/dollar-variable-colon-space-before
 
+// fusv-disable
+
 // Basic colours
 // --------------------------
 $red-050         : #ffebee;
@@ -308,3 +310,5 @@ $gray-700        : #495057;
 $gray-800        : #343a40;
 $gray-900        : #212529;
 $white           : #ffffff;
+
+// fusv-enable
