--- a/src/views/includes/sections/_cards.pug
+++ b/src/views/includes/sections/_cards.pug
@@ -3,8 +3,8 @@ include ../../mixins/_pictures
 
 section.cards#cards
   .container
-    .row.g-5
-      .col-12.col-sm-6.col-lg-4
+    .row.row-cols-1.row-cols-sm-2.row-cols-lg-3.g-4.g-lg-5
+      .col
         .card.card-dark
           +cardsPicture("landscape_tree_black", "Web Design")
           .card-img-overlay.card-d-flex
@@ -12,7 +12,7 @@ section.cards#cards
             p.card-text Made with love and in accordance with the newest technologies.
             a.btn.btn-outline-orange.card-link(href="services.html" aria-label="Card Web Design") Services &#8594;
 
-      .col-12.col-sm-6.col-lg-4
+      .col
         .card.card-dark
           +cardsPicture("lighthouse_lantern_sky_storm_night", "Web Development")
           .card-img-overlay.card-d-flex
@@ -20,7 +20,7 @@ section.cards#cards
             p.card-text We devote our attention to writing every line of code.
             a.btn.btn-outline-orange.card-link(href="services.html" aria-label="Card Web Dev") Services &#8594;
 
-      .col-12.col-sm-6.col-lg-4
+      .col
         .card.card-dark
           +cardsPicture("road_sunset_marking_grass", "Mobile Development")
           .card-img-overlay.card-d-flex
@@ -28,7 +28,7 @@ section.cards#cards
             p.card-text Turn devices into miniature power station of function and fun.
             a.btn.btn-outline-orange.card-link(href="services.html" aria-label="Card Mobile Dev") Services &#8594;
 
-      .col-12.col-sm-6.col-lg-4
+      .col
         .card.card-dark
           +cardsPicture("sunset_sun_clouds", "Web Applications")
           .card-img-overlay.card-d-flex
@@ -36,7 +36,7 @@ section.cards#cards
             p.card-text Take advantage of technology, interact with your user.
             a.btn.btn-outline-orange.card-link(href="services.html" aria-label="Card Web Apps") Services &#8594;
 
-      .col-12.col-sm-6.col-lg-4
+      .col
         .card.card-dark
           +cardsPicture("sea_surf_wave_sunset", "Smart Solutions")
           .card-img-overlay.card-d-flex
@@ -44,7 +44,7 @@ section.cards#cards
             p.card-text Make your daily life better and easier with high-end technology.
             a.btn.btn-outline-orange.card-link(href="services.html" aria-label="Card Smart Solutions") Services &#8594;
 
-      .col-12.col-sm-6.col-lg-4
+      .col
         .card.card-dark
           +cardsPicture("sea_waves_rocks_beach_sunrise", "Portfolio")
           .card-img-overlay.card-d-flex
