--- a/src/views/includes/sections/_features.pug
+++ b/src/views/includes/sections/_features.pug
@@ -5,9 +5,9 @@ section.features.text-center#features
       .col-12
         h2.mb-0 Features and benefits
 
-    .row.mt-0.mb-5.g-5
-      .col-12.col-sm-6.col-lg-4
-        .card.card-orange
+    .row.row-cols-1.row-cols-sm-2.row-cols-lg-3.mt-0.mb-5.g-4.g-lg-5
+      .col
+        .card.card-orange.h-100
           .card-img
             //- i.fas.fa-tachometer-alt.fa-5x
             img.svg-inline--fa.fa-5x#fa-tachometer-alt(src="fonts/svgs/solid/tachometer-alt.svg" alt="tachometer-alt" inline)
@@ -15,8 +15,8 @@ section.features.text-center#features
             h3.card-title Performance
             p.card-text Made with love and in accordance with the newest technologies.
 
-      .col-12.col-sm-6.col-lg-4
-        .card.card-grey
+      .col
+        .card.card-grey.h-100
           .card-img
             //- i.fas.fa-tools.fa-5x
             img.svg-inline--fa.fa-5x#fa-tools(src="fonts/svgs/solid/tools.svg" alt="tools" inline)
@@ -24,8 +24,8 @@ section.features.text-center#features
             h3.card-title Audit
             p.card-text Examination of page performance to achieve your goals.
 
-      .col-12.col-sm-6.col-lg-4
-        .card.card-blue
+      .col
+        .card.card-blue.h-100
           .card-img
             //- i.fas.fa-medal.fa-5x
             img.svg-inline--fa.fa-5x#fa-medal(src="fonts/svgs/solid/medal.svg" alt="medal" inline)
@@ -33,8 +33,8 @@ section.features.text-center#features
             h3.card-title SEO Ready
             p.card-text Generate leads for your business through organic traffic.
 
-      .col-12.col-sm-6.col-lg-4
-        .card.card-grey
+      .col
+        .card.card-grey.h-100
           .card-img
             //- i.fas.fa-heartbeat.fa-5x
             img.svg-inline--fa.fa-5x#fa-heartbeat(src="fonts/svgs/solid/heartbeat.svg" alt="heartbeat" inline)
@@ -42,8 +42,8 @@ section.features.text-center#features
             h3.card-title Best practices
             p.card-text Follow the best practices for modern web development.
 
-      .col-12.col-sm-6.col-lg-4
-        .card.card-green
+      .col
+        .card.card-green.h-100
           .card-img
             //- i.fas.fa-universal-access.fa-5x
             img.svg-inline--fa.fa-5x#fa-universal-access(src="fonts/svgs/solid/universal-access.svg" alt="universal-access" inline)
@@ -51,8 +51,8 @@ section.features.text-center#features
             h3.card-title Accessibility
             p.card-text Provide equal access, no barriers that prevent interaction.
 
-      .col-12.col-sm-6.col-lg-4
-        .card.card-grey
+      .col
+        .card.card-grey.h-100
           .card-img
             //- i.fas.fa-desktop.fa-5x
             img.svg-inline--fa.fa-5x#fa-desktop(src="fonts/svgs/solid/desktop.svg" alt="desktop" inline)
