--- a/src/views/includes/sections/_hero.pug
+++ b/src/views/includes/sections/_hero.pug
@@ -6,9 +6,5 @@ section.hero#hero
     .hero-content.text-center
       h1.hero-title.mb-0 Adorade
       .hero-desc
-        h2.mb-0.rotate-text Web Design
-        h2.mb-0.rotate-text Web Development
-        h2.mb-0.rotate-text Mobile Development
-        h2.mb-0.rotate-text Web Applications
-        h2.mb-0.rotate-text Smart Solutions
+        h2.mb-0 Your Web Design
     include ../misc/_scroll-down
