perf(statics): add svg favicon

--- a/src/views/modules/navbar/_navbar.pug
+++ b/src/views/modules/navbar/_navbar.pug
@@ -1,4 +1,4 @@
-//- includes/drawernavbar/_navbar.pug
+//- modules/navbar/_navbar.pug
 nav.navbar.fixed-top.navbar-dark.bg-transparent
   .container-fluid
     .navbar-header.d-inline-flex
