--- a/src/scss/components/_features.scss
+++ b/src/scss/components/_features.scss
@@ -7,6 +7,12 @@
   // background-color: var(--background-color-normal);
   // color: var(--text-color);
 
+  @media (min-width: 1920px) {
+    .container {
+      max-width: 1440px;
+    }
+  }
+
   .card {
     margin: 0;
     border: 0 solid rgba(0, 0, 0, 0);
