--- a/src/views/includes/forms/_newsletter.pug
+++ b/src/views/includes/forms/_newsletter.pug
@@ -3,8 +3,8 @@ section.newsletter.text-center#newsletter
   h2.mb-4 Check our newsletter
 
   .container
-    .row
-      .col.col-md-8.offset-md-2
+    .row.justify-content-center
+      .col.col-md-8.col-xl-6
         //- the form result (success or error) will be rendered inside `.form-response`
         .form-response.alert.shadow-lg.d-none
 
