--- a/src/views/includes/pages/_features.pug
+++ b/src/views/includes/pages/_features.pug
@@ -1,12 +1,12 @@
 //- includes/pages/_features.pug
 include ../../mixins/_pictures
 
-section.features#features-1
+section.feature#features-1
   .container
     .row.align-items-center
       .col-12.col-md-6.order-md-1
         +featuresPicture("features", "dawn_desktop_background_dusk", "jpg", "Performance")
-      .col-12.col-md-6
+      .col-12.col-md-6.pe-md-5
         h3.my-4.mt-md-0.text-center.text-md-start Performance
         p.mb-3.fw-bold.
           Made with love and in accordance with the newest technologies.
@@ -16,12 +16,12 @@ section.features#features-1
           takes over three seconds to load.
         p.mb-0.fw-bold #test #critical #speed #performance #user #new #tech
 
-section.features#features-2
+section.feature#features-2
   .container
     .row.align-items-center
       .col-12.col-md-6
         +featuresPicture("features", "architecture_blur_building_exterior", "jpg", "Audit Ready")
-      .col-12.col-md-6
+      .col-12.col-md-6.ps-md-5
         h3.my-4.mt-md-0.text-center.text-md-start Audit Ready
         p.mb-3.fw-bold.
           Examination of page performance to achieve your goals.
@@ -31,12 +31,12 @@ section.features#features-2
           traffic goals, and if not, how you can improve it to increase performance.
         p.mb-0.fw-bold #audit #traffic #performance #goals #optimize
 
-section.features#features-3
+section.feature#features-3
   .container
     .row.align-items-center
       .col-12.col-md-6.order-md-1
         +featuresPicture("features", "sea_waves_rocks_beach_sunrise", "jpg", "SEO Ready")
-      .col-12.col-md-6
+      .col-12.col-md-6.pe-md-5
         h3.my-4.mt-md-0.text-center.text-md-start SEO Ready
         p.mb-3.fw-bold.
           Generate leads for your business through organic traffic.
@@ -46,12 +46,12 @@ section.features#features-3
           target audience and follows key principles of SEO.
         p.mb-0.fw-bold #seo #leads #organic #traffic #audience #target
 
-section.features#features-4
+section.feature#features-4
   .container
     .row.align-items-center
       .col-12.col-md-6
         +featuresPicture("features", "wallpaper_autumn_branches", "jpg", "Best practices")
-      .col-12.col-md-6
+      .col-12.col-md-6.ps-md-5
         h3.my-4.mt-md-0.text-center.text-md-start Best practices
         p.mb-3.fw-bold.
           We follow the best practices for modern web development.
@@ -61,12 +61,12 @@ section.features#features-4
           The design also impacts your conversions, credibility, and ultimately makes or breaks the success of your site.
         p.mb-0.fw-bold #modern #web #development #good #practice #success
 
-section.features#features-5
+section.feature#features-5
   .container
     .row.align-items-center
       .col-12.col-md-6.order-md-1
         +featuresPicture("features", "clouds_daylight_forest", "jpg", "Accessibility")
-      .col-12.col-md-6
+      .col-12.col-md-6.pe-md-5
         h3.my-4.mt-md-0.text-center.text-md-start Accessibility
         p.mb-3.fw-bold.
           Provide equal access, no barriers that prevent interaction.
@@ -76,12 +76,12 @@ section.features#features-5
           disabilities, and socio-economic restrictions on bandwidth and speed.
         p.mb-0.fw-bold #equal #access #opportunity #people #disabilities #accessible
 
-section.features#features-6
+section.feature#features-6
   .container
     .row.align-items-center
       .col-12.col-md-6
         +featuresPicture("features", "background_beautiful_clouds", "jpg", "Responsive design")
-      .col-12.col-md-6
+      .col-12.col-md-6.ps-md-5
         h3.my-4.mt-md-0.text-center.text-md-start Responsive design
         p.mb-3.fw-bold.
           Make it look good on all devices, mobile-friendly.
