--- a/src/views/includes/pages/_portfolio.pug
+++ b/src/views/includes/pages/_portfolio.pug
@@ -4,9 +4,9 @@ include ../../mixins/_pictures
 section.portfolio#portfolio-1
   .container
     .row.align-items-center
-      .col-12.col-md-6
+      .col-12.col-md-6.order-md-1
         +featuresPicture("portfolio", "boodark", "png", "BooDark")
-      .col-12.col-md-6
+      .col-12.col-md-6.pe-md-5
         h3.my-4.mt-md-0.text-center.text-md-start BooDark
         p.mb-0 A modern Bootstrap Dark theme for phpMyAdmin.
         p.mb-4.fw-bold #dark-theme #css #theme #scss #phpmyadmin #dark #pma #bootstrap5
@@ -25,9 +25,9 @@ section.portfolio#portfolio-1
 section.portfolio#portfolio-2
   .container
     .row.align-items-center
-      .col-12.col-md-6.order-md-1
-        +featuresPicture("portfolio", "unikorn", "png", "UniKorn")
       .col-12.col-md-6
+        +featuresPicture("portfolio", "unikorn", "png", "UniKorn")
+      .col-12.col-md-6.ps-md-5
         h3.my-4.mt-md-0.text-center.text-md-start UniKorn
         p.mb-0 Frontend framework for designing websites and web applications.
         p.mb-4.fw-bold #node #yarn #git #gulp #scss #es6 #pug
@@ -46,9 +46,9 @@ section.portfolio#portfolio-2
 section.portfolio#portfolio-3
   .container
     .row.align-items-center
-      .col-12.col-md-6
+      .col-12.col-md-6.order-md-1
         +featuresPicture("portfolio", "respo", "png", "Respo")
-      .col-12.col-md-6
+      .col-12.col-md-6.pe-md-5
         h3.my-4.mt-md-0.text-center.text-md-start Respo
         p.mb-0 Responsive design check tool, see how websites looks on different devices.
         p.mb-4.fw-bold #devices #take #screenshots #photo
@@ -67,9 +67,9 @@ section.portfolio#portfolio-3
 section.portfolio#portfolio-4
   .container
     .row.align-items-center
-      .col-12.col-md-6.order-md-1
-        +featuresPicture("portfolio", "webmagia", "png", "WebMagia")
       .col-12.col-md-6
+        +featuresPicture("portfolio", "webmagia", "png", "WebMagia")
+      .col-12.col-md-6.ps-md-5
         h3.my-4.mt-md-0.text-center.text-md-start WebMagia
         p.mb-0 High Quality WordPress Premium Templates.
         p.mb-4.fw-bold #wordpress #themes #plugins #cms
@@ -87,9 +87,9 @@ section.portfolio#portfolio-4
 section.portfolio#portfolio-5
   .container
     .row.align-items-center
-      .col-12.col-md-6
+      .col-12.col-md-6.order-md-1
         +featuresPicture("portfolio", "timero", "png", "Timero")
-      .col-12.col-md-6
+      .col-12.col-md-6.pe-md-5
         h3.my-4.mt-md-0.text-center.text-md-start Timero
         p.mb-0 A fresh way to save your time, without any distraction.
         p.mb-4.fw-bold #time #tasks #get #done
