--- a/src/views/includes/pages/_services.pug
+++ b/src/views/includes/pages/_services.pug
@@ -6,7 +6,7 @@ section.services#services-1
     .row.align-items-center
       .col-12.col-md-6.order-md-1
         +featuresPicture("services", "landscape_tree_black", "jpg", "Web Design")
-      .col-12.col-md-6
+      .col-12.col-md-6.pe-md-5
         h3.my-4.mt-md-0.text-center.text-md-start Web Design
         p.mb-3.fw-bold.
           Made with love and in accordance with the newest technologies.
@@ -20,7 +20,7 @@ section.services#services-2
     .row.align-items-center
       .col-12.col-md-6
         +featuresPicture("services", "lighthouse_lantern_sky_storm_night", "jpg", "Web Development")
-      .col-12.col-md-6
+      .col-12.col-md-6.ps-md-5
         h3.my-4.mt-md-0.text-center.text-md-start Web Development
         p.mb-3.fw-bold.
           We focus our attention to writing every line of code.
@@ -34,7 +34,7 @@ section.services#services-3
     .row.align-items-center
       .col-12.col-md-6.order-md-1
         +featuresPicture("services", "road_sunset_marking_grass", "jpg", "Mobile Apps")
-      .col-12.col-md-6
+      .col-12.col-md-6.pe-md-5
         h3.my-4.mt-md-0.text-center.text-md-start Mobile Apps
         p.mb-3.fw-bold.
           Turn devices into miniature powerhouses of function and fun.
@@ -48,7 +48,7 @@ section.services#services-4
     .row.align-items-center
       .col-12.col-md-6
         +featuresPicture("services", "sunset_sun_clouds", "jpg", "Web Applications")
-      .col-12.col-md-6
+      .col-12.col-md-6.ps-md-5
         h3.my-4.mt-md-0.text-center.text-md-start Web Applications
         p.mb-3.fw-bold.
           Make the most of technologies, interact with your user.
@@ -62,7 +62,7 @@ section.services#services-5
     .row.align-items-center
       .col-12.col-md-6.order-md-1
         +featuresPicture("services", "sea_surf_wave_sunset", "jpg", "Smart Solutions")
-      .col-12.col-md-6
+      .col-12.col-md-6.pe-md-5
         h3.my-4.mt-md-0.text-center.text-md-start Smart Solutions
         p.mb-3.fw-bold.
           Make your daily life better and easier.
