--- a/src/views/includes/sections/_parallax.pug
+++ b/src/views/includes/sections/_parallax.pug
@@ -6,8 +6,8 @@ section.parallax#parallax
     +parallaxPicture("pine_trees_under_blue_sky_1920x1080", "Pine Trees Under Blue Sky")
     .parallax-overlay
       .container
-        .row
-          .col.col-lg-8.offset-lg-2
+        .row.justify-content-center
+          .col.col-lg-8.col-hd-6
             h2
               | Once upon a time, we started a journey, to discover, to learn...
               | #[span.p-2 beautiful things].
