--- a/src/views/includes/sections/_technologies.pug
+++ b/src/views/includes/sections/_technologies.pug
@@ -4,8 +4,9 @@ section.technologies.text-center#technologies
     .row
       .col-12
         h2.mb-4 Technologies we work with
-    .row
-      .col-lg-8.offset-lg-2
+
+    .row.justify-content-center
+      .col.col-md-8
         img.tech-logos(src="images/tech/wordpress.svg" alt="logos" inline)
         img.tech-logos(src="images/tech/php.svg" alt="logos" inline)
         img.tech-logos.mysql(src="images/tech/mysql.svg" alt="logos" inline)
