--- a/src/views/includes/sections/_testimonials.pug
+++ b/src/views/includes/sections/_testimonials.pug
@@ -3,10 +3,10 @@ section.testimonials.text-center#testimonials
   .container
     .row
       .col-12
-        h2.mb-0 What our clients say
+        h2.mb-4 What our clients say
 
-    .row.mt-5
-      .col-8.offset-2
+    .row.justify-content-center
+      .col.col-md-8.col-hd-6
         .carousel.slide#carouselTestimonial(data-bs-ride="carousel")
           .carousel-indicators.mb-n3
             button.active(
