--- a/src/views/modules/footer/_footer-call-to-action.pug
+++ b/src/views/modules/footer/_footer-call-to-action.pug
@@ -1,7 +1,7 @@
 //- modules/footer/_footer-call-to-action.pug
 .container
-  .row
-    .col.col-lg-8.offset-lg-2
+  .row.justify-content-center
+    .col.col-lg-6
       p.lead.mb-5
         | Interested in working with us? We are here to answer any sort of question you
         | may have. Get in touch with us and we will do our best to
