--- a/src/views/includes/forms/_contact-form.pug
+++ b/src/views/includes/forms/_contact-form.pug
@@ -6,8 +6,8 @@ section.contact#contact
       .col-12
         h4.text-center.mb-5 If you have any type of questions do not hesitate to contact us!
 
-    .row.g-0
-      .col.col-md-8.offset-md-2
+    .row.g-0.justify-content-center
+      .col.col-md-8.col-hd-6
         //- the form result (success or error) will be rendered inside `.form-response`
         .form-response.alert.shadow-lg.d-none
 
