--- a/src/views/includes/forms/_contact-form.pug
+++ b/src/views/includes/forms/_contact-form.pug
@@ -17,16 +17,16 @@ section.contact#contact
           //- HONEYPOT FIELD
           .form-group.d-none
             .input
-              label(for="bot-field") Don’t fill this out if you're human
+              label(for="contact-bot-field") Don’t fill this out if you're human
               input.form-control#contact-bot-field(type="text" name="bot-field" autocomplete="off")
 
           .form-group.mb-3
             .input
               input.form-control#contact-name(
                 type="text" name="name" maxlength="50" placeholder="Your name"
-                pattern="^[a-zA-Z][a-zA-Z-' ]{1,50}[a-zA-Z']{0,1}$"
+                pattern="^[a-zA-Z][a-zA-Z-' ]{1,50}[a-zA-Z']{0,1}$" autocomplete="name"
                 title="Please enter a valid name." aria-label="Your name" required)
-              label(for="name") Name #[span.required *]
+              label(for="contact-name") Name #[span.required *]
               .valid-feedback Looks good!
               .invalid-feedback Please enter a valid name.
 
@@ -35,8 +35,9 @@ section.contact#contact
               input.form-control#contact-email(
                 type="email" name="email" maxlength="100" placeholder="Your email"
                 pattern="^([a-z0-9_\\.\\-]+)@([a-z0-9\\.\\-]+){2,255}\.([a-z]+){2,10}$"
+                autocomplete="email"
                 title="Please enter a valid email" aria-label="Your email" required)
-              label(for="email") Email #[span.required *]
+              label(for="contact-email") Email #[span.required *]
               .valid-feedback Looks good!
               .invalid-feedback Please enter a valid email.
 
@@ -45,8 +46,9 @@ section.contact#contact
               input.form-control#contact-phone(
                 type="tel" name="phone" maxlength="20" placeholder="Your phone"
                 pattern="^(\\+|0{2})?(\\d{0,2}\\s?)(\\d{3}\\s?)(\\d{3}\\s?)(\\d{3})$"
+                autocomplete="tel"
                 title="0000 000 000 or +40 000 000 000." aria-label="Your phone" required)
-              label(for="phone") Phone #[span.required *]
+              label(for="contact-phone") Phone #[span.required *]
               .valid-feedback Looks good!
               .invalid-feedback Please enter a valid phone.
 
@@ -56,7 +58,7 @@ section.contact#contact
                 type="text" name="subject" maxlength="100" placeholder="Your subject"
                 pattern=".{1,100}"
                 title="Maximum 100 characters." aria-label="Your subject" required)
-              label(for="subject") Subject #[span.required *]
+              label(for="contact-subject") Subject #[span.required *]
               .valid-feedback Looks good!
               .invalid-feedback Please enter a valid subject.
 
@@ -65,14 +67,14 @@ section.contact#contact
               textarea.form-control#contact-message(
                 name="message" rows="6" maxlength="600" placeholder="Your message"
                 title="Maximum 600 characters." aria-label="Your message" required)
-              label(for="message") Message #[span.required *]
+              label(for="contact-message") Message #[span.required *]
               .valid-feedback Looks good!
               .invalid-feedback Please enter a valid message.
 
           .form-group
             .form-check
               input.form-check-input#contact-terms-check(type="checkbox" value="" required)
-              label.form-check-label(for="terms-check") Agree to terms and conditions
+              label.form-check-label(for="contact-terms-check") Agree to terms and conditions
               .valid-feedback Looks good!
               .invalid-feedback You must agree before submitting.
 
