--- a/src/views/includes/forms/_newsletter.pug
+++ b/src/views/includes/forms/_newsletter.pug
@@ -22,7 +22,7 @@ section.newsletter.text-center#newsletter
             .col
               input.form-control.rounded-0.rounded-start#news-name(
                 type="text" name="name" maxlength="50" placeholder="Your name"
-                pattern="^[a-zA-Z][a-zA-Z-' ]{1,50}[a-zA-Z']{0,1}$"
+                pattern="^[a-zA-Z][a-zA-Z-' ]{1,50}[a-zA-Z']{0,1}$" autocomplete="name"
                 title="Please enter a valid name." aria-label="Your name" required)
               label.visually-hidden(for="news-name") Name
               .valid-feedback Looks good!
@@ -32,6 +32,7 @@ section.newsletter.text-center#newsletter
               input.form-control.rounded-0#news-email(
                 type="email" name="email" placeholder="your@email.here"
                 pattern="^([a-z0-9_\\.\\-]+)@([a-z0-9\\.\\-]+){2,255}\.([a-z]+){2,10}$"
+                autocomplete="email"
                 title="Please enter a valid email" aria-label="your@email.here" required)
               label.visually-hidden(for="news-email") Email
               .valid-feedback Looks good!
