build(tools): update styles task

--- a/src/views/partials/_scripts.pug
+++ b/src/views/partials/_scripts.pug
@@ -6,9 +6,7 @@ block external-js
 block vendors-js
   //--- Vendors main JS
   //- jQuery 3.6.0                      - modules
-  //- @popperjs/core 2.9.2              - modules
-  //- bootstrap 5.0.1                   - modules
-  //- browser.js 4.0.0                  - src
+  //- bootstrap bundle 5.2.3            - modules
   //- cookieconsent 3.1.1               - modules
   script#vendors(defer src="js/vendors.min.js")
 
