fix(fonts): update google fonts

--- a/src/views/partials/_preconnect.pug
+++ b/src/views/partials/_preconnect.pug
@@ -5,3 +5,5 @@ if entry.inline
   link(rel="preconnect" href="https://www.google.com" crossorigin)
   link(rel="preconnect" href="https://www.google-analytics.com" crossorigin)
   link(rel="preconnect" href="https://www.googletagmanager.com" crossorigin)
+  link(rel="preconnect" href="https://fonts.googleapis.com")
+  link(rel="preconnect" href="https://fonts.gstatic.com" crossorigin)
