refactor(fonts): update fonts stylesheet

--- a/src/views/layout/_thanks.pug
+++ b/src/views/layout/_thanks.pug
@@ -16,7 +16,7 @@ html(lang="en")
 
     block styles
       link(
-        href="https://fonts.googleapis.com/css?family=Roboto:400,700&subset=latin,latin-ext" rel="stylesheet")
+        href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet")
       if entry.inline
         link#inline-style(href="css/thanks.min.css" inline)
       else
