--- a/src/scss/includes/_custom-variables.scss
+++ b/src/scss/includes/_custom-variables.scss
@@ -21,6 +21,8 @@ $gray                   : $grey-700;         // #616161
 // $gray-light             : $grey-400;         // #bdbdbd
 // $gray-lighter           : $grey-200;         // #eee
 
+$orange                 : $deep-orange-500;  // #ff5722
+
 // $brand-primary          : $primary-color;    // #ff5722
 // $brand-accent           : $accent-color;     // #00b0ff
 // $brand-success          : $green-500;        // #4caf50
