--- a/src/views/modules/offcanvas/_offcanvas.pug
+++ b/src/views/modules/offcanvas/_offcanvas.pug
@@ -6,9 +6,7 @@ include ../../mixins/_pictures
   .offcanvas-header
     h5.menu-logo.mb-0#menuLogo
       +menuLogo("logo-drawer", "Adorade")
-    button.btn-close.text-reset(type="button" data-bs-dismiss="offcanvas" aria-label="Close Main Menu")
-      //- i.fas.fa-times
-      img.svg-inline--fa#fa-times(src="fonts/svgs/solid/times.svg" alt="times" inline)
+    button.btn-close(type="button" data-bs-dismiss="offcanvas" aria-label="Close Main Menu")
 
   .offcanvas-body
     ul.offcanvas-nav.nav.nav-pills.flex-column.mb-auto
