--- a/src/scss/components/_carousel.scss
+++ b/src/scss/components/_carousel.scss
@@ -26,8 +26,29 @@
     overflow: unset;
   }
 
+  .carousel-indicators [data-bs-target] {
+    background-color: var(--text-color);
+  }
+
   .carousel-control-prev,
   .carousel-control-next {
     background: none;
   }
+
+  .carousel-control-prev-icon,
+  .carousel-control-next-icon {
+    filter: invert(1) grayscale(100)
+  }
+}
+
+[data-bs-theme="dark"] .carousel .carousel-indicators [data-bs-target],
+[data-bs-theme="dark"].carousel .carousel-indicators [data-bs-target] {
+  background-color: var(--text-color);
+}
+
+[data-bs-theme="dark"] .carousel .carousel-control-prev-icon,
+[data-bs-theme="dark"] .carousel .carousel-control-next-icon,
+[data-bs-theme="dark"].carousel .carousel-control-prev-icon,
+[data-bs-theme="dark"].carousel .carousel-control-next-icon {
+  filter: none;
 }
