--- a/src/scss/components/_offcanvas.scss
+++ b/src/scss/components/_offcanvas.scss
@@ -22,9 +22,12 @@
     right: 0;
     display: flex;
     padding: .5rem;
-    margin: 0;
-    background: 0 0;
-    font-size: 1.5rem;
+    margin: .25rem .25rem 0 0;
+    font-size: 1.25rem;
+
+    &:focus {
+      box-shadow: none;
+    }
   }
 }
 
