--- a/src/views/partials/_color-modes.pug
+++ b/src/views/partials/_color-modes.pug
@@ -2,6 +2,6 @@
 //--- Color Modes Toggler
 
 if entry.inline
-  script#color-modes(src="js/color-modes.js" inline)
+  script#color-modes(src="js/color-modes.min.js" inline)
 else
   script#color-modes(src="js/color-modes.js")
