--- a/src/views/partials/_analytics.pug
+++ b/src/views/partials/_analytics.pug
@@ -1,14 +1,10 @@
 //- partials/_analytics.pug
 if entry.inline
-  //--- Global site tag (gtag.js) - Google Analytics
-  script(async src="https://www.googletagmanager.com/gtag/js?id=UA-39823263-1")
+  //--- Google tag (gtag.js)
+  script(async src="https://www.googletagmanager.com/gtag/js?id=G-TB28LRXJ7Y")
   script.
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-    gtag('config', 'UA-39823263-1', {
-      'user_id': 'Us19Er69'
-    });
-    gtag('set', {
-      'cookie_flags': 'SameSite=None;Secure'
-    });
+
+    gtag('config', 'G-TB28LRXJ7Y');
