--- a/src/scss/components/_form.scss
+++ b/src/scss/components/_form.scss
@@ -4,8 +4,8 @@
 
 form {
   padding: 0;
-  margin: 0;
-  background-color: var(--background-color-dark);
+  margin: 0;//
+  // background-color: var(--background-color-dark);
   font-family: Roboto, Arial, sans-serif;
   font-size: 1rem;
   font-weight: 400;
@@ -25,6 +25,7 @@ form {
   input,
   textarea {
     padding-left: 100px;
+    border-color: #17a2b8;
     border-radius: .5rem;
     color: #333;
     transition: all .2s linear;
