--- a/src/views/mixins/_pictures.pug
+++ b/src/views/mixins/_pictures.pug
@@ -41,7 +41,7 @@ mixin parallaxPicture(name, alt)
     source(type="image/webp" data-srcset=`images/hero-unit/${name}.webp`)
     source(type="image/jpeg" data-srcset=`images/hero-unit/${name}.jpg`)
     img.lazy-parallax.lazyload.parallax-img(
-      loading="lazy" data-src=`images/hero-unit/${name}.jpg` data-speed=".8" alt=alt)
+      loading="lazy" data-src=`images/hero-unit/${name}.jpg` alt=alt)
 
 //- Top Banner
 //------------------------
